[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/MainMenu UI/Main Menu Background.png" type="Texture" id=1]
[ext_resource path="res://UI_script/Main Menu.gd" type="Script" id=2]
[ext_resource path="res://Sprites/MainMenu UI/Title_CitrusSlasher.png" type="Texture" id=3]
[ext_resource path="res://Sounds/Pirate1_Theme1.wav" type="AudioStream" id=4]
[ext_resource path="res://Sprites/MainMenu UI/playbutton.png" type="Texture" id=5]

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 257.165, 144 )
scale = Vector2( 0.239757, 0.239601 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Sprite" parent="."]
position = Vector2( 260, 80 )
scale = Vector2( 0.75, 0.75 )
z_index = 1
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="MainThemeSoundtrack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="PlayButton" type="TextureButton" parent="."]
margin_left = 192.0
margin_top = 96.0
margin_right = 312.0
margin_bottom = 216.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="finished" from="MainThemeSoundtrack" to="." method="_on_MainThemeSoundtrack_finished"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
